syntax = "proto3";

package healthvoice.v1;

// Patient gRPC service
service Patients {
  rpc GetPatient (GetPatientRequest) returns (PatientResponse);
  rpc CreatePatient (CreatePatientRequest) returns (CreatePatientResponse);
  rpc GetAllPatients (GetAllPatientsRequest) returns (GetAllPatientsResponse);
}

// Messages
message GetPatientRequest {
  string patient_id = 1;
}

message CreatePatientRequest {
  string first_name = 1;
  string last_name = 2;
  string email = 3;
  string date_of_birth = 4; // ISO 8601 format
}

message CreatePatientResponse {
  string patient_id = 1;
  bool success = 2;
  string error_message = 3;
}

message GetAllPatientsRequest {
  // Empty for now, could add pagination later
}

message GetAllPatientsResponse {
  repeated PatientResponse patients = 1;
}

message PatientResponse {
  string patient_id = 1;
  string first_name = 2;
  string last_name = 3;
  string email = 4;
  string date_of_birth = 5; // ISO 8601 format
  string created_at = 6; // ISO 8601 format
  string full_name = 7;
} 